updated list of authors, implemented comments

--- a/nzmarg.tex
+++ b/nzmarg.tex
@@ -57,6 +57,7 @@
    \author{B. St{\"o}lzner\inst{1},
    				B. Joachimi\inst{1},
             		A. Korn\inst{1},
+          		H. Hildebrandt\inst{2},
           		\and
           		A. H. Wright\inst{2}
           		}
@@ -69,7 +70,7 @@
 
    \date{Received ; accepted }
 
- \abstract{We present a method that faithfully propagates residual uncertainties in photometric redshift distributions into the cosmological inference from weak lensing measurements. The redshift distributions of tomographic redshift bins are parameterised using a flexible modified Gaussian mixture model. We fit this model to pre-calibrated redshift distributions and implement an analytic marginalisation over the potentially several hundred redshift nuisance parameters in the weak lensing likelihood, which is demonstrated to accurately recover the cosmological posterior. By iteratively fitting cosmological and nuisance parameters arising from the redshift distribution model, we perform a self-calibration of the redshift distributions via the tomographic cosmic shear measurements. Our method is applied to the third data release of the Kilo-Degree Survey combined with the VISTA Kilo-Degree Infrared Galaxy Survey (KV450). We find constraints on cosmological parameters that are in very good agreement with the fiducial KV450 cosmic shear analysis and investigate the effects of the more flexible model on the self-calibrated redshift distributions. We observe posterior shifts of the medians of the five tomographic redshift distributions of up to $\Delta z \approx 0.02$, which are however degenerate with an observed decrease of the amplitude of intrinsic galaxy alignments by about $10\%$.}
+ \abstract{We present a method that accurately propagates residual uncertainties in photometric redshift distributions into the cosmological inference from weak lensing measurements. The redshift distributions of tomographic redshift bins are parameterised using a flexible modified Gaussian mixture model. We fit this model to pre-calibrated redshift distributions and implement an analytic marginalisation over the potentially several hundred redshift nuisance parameters in the weak lensing likelihood, which is demonstrated to accurately recover the cosmological posterior. By iteratively fitting cosmological and nuisance parameters arising from the redshift distribution model, we perform a self-calibration of the redshift distributions via the tomographic cosmic shear measurements. Our method is applied to the third data release of the Kilo-Degree Survey combined with the VISTA Kilo-Degree Infrared Galaxy Survey (KV450). We find constraints on cosmological parameters that are in very good agreement with the fiducial KV450 cosmic shear analysis and investigate the effects of the more flexible model on the self-calibrated redshift distributions. We observe posterior shifts of the medians of the five tomographic redshift distributions of up to $\Delta z \approx 0.02$, which are however degenerate with an observed decrease of the amplitude of intrinsic galaxy alignments by about $10\%$.}
  
 % 5 {} token are mandatory
 
@@ -88,7 +89,7 @@ Several methods of photometric redshift calibration have been developed, such as
  
  Recently, \cite{2020MNRAS.491.4768R} applied hierarchical logistic Gaussian processes as a method to calibrate redshift distributions of galaxy samples, via cross-correlation clustering measurements with overlapping spectroscopic samples. Gaussian processes are nonparametric, i.e. they are not limited by a functional form, and therefore they fulfil the condition of being able to accurately fit the redshift distribution. However, since the fit parameters of the Gaussian process are non-linear, implementing the Gaussian process in the weak lensing likelihood (with fit parameters acting as nuisance parameters) and subsequent marginalisation proves to be a challenging task. Therefore it is advantageous to parametrise the redshift distribution using a model with linear fit parameters, so that we can readily apply an analytic marginalisation over nuisance parameters.
  
-It is common to parameterise the uncertainty on the redshift distribution using a shift in the mean of the distribution \citep{hildebrandt18, hildebrandt20, HSC2, DES3}, which captures the effect of uncertainties in the redshift distribution on the weak lensing analysis to first order \citep{amara}. However, with larger surveys and decreasing statistical uncertainties, the contribution of higher orders will become important \citep{wright_som}. Therefore, it is particularly interesting to adopt redshift distribution models that capture arbitrary variations in the distribution.
+It is common to parameterise the uncertainty on the redshift distribution using a shift in the mean of the distribution \citep{hildebrandt18, hildebrandt20, HSC2, DES3, hoyle18}, which captures the effect of uncertainties in the redshift distribution on the weak lensing analysis to first order \citep{amara}. However, with larger surveys and decreasing statistical uncertainties, the contribution of higher orders will become important \citep{wright_som}. Therefore, it is particularly interesting to adopt redshift distribution models that capture arbitrary variations in the distribution.
 
 In this paper we present such a flexible redshift distribution model with linear fit parameters, as well as a technique that provides an analytic marginalisation over nuisance parameters which originate from the redshift distribution calibration. We parameterise the redshift distribution of samples of galaxies as a `comb', that is a modified Gaussian mixture model with fixed, equidistant separation between components, identical variance, and a fixed number of components. The amplitudes of each Gaussian component serve as fit parameters in the redshift distribution calibration. 
 
@@ -258,24 +259,24 @@ where $n^{\rm data}_i$ and $n^{\rm model}_i$ are the observed and modelled histo
 }
 assuming a Gaussian prior on the parameters $\boldsymbol{p}_{\rm ana}$. Fixing the parameters $\boldsymbol{p}_{\rm sam}$ to the ones found in step 2), we use Newton's method to minimise \eqref{eq:delta_p} so that the parameters $\boldsymbol{p}_{\rm ana}$ converge towards the peak of the likelihood. Since the constraints on these parameters, which describe the redshift distribution, are dominated by the external priors through the original calibration we anticipate the correction by the Newton step to be small. \footnote{For a likelihood that is close to Gaussian we can find the maximum in one step. However, even if the initial redshift distribution is substantially different from the true underlying distribution, so that the likelihood at the initial values of the fit parameters is non-Gaussian, we can use Newton's method to iterate towards the peak \citep{taylor10}.} The red arrows in Fig. \ref{fig:iterative_calibration} represent this calibration step.  
 
-By iterating over steps 2 and 3 we expect small corrections of both sets of parameters towards their best-fit values in the combined parameter space. The best-fit parameters $\boldsymbol{p}^*_{\rm ana}$ then represent the redshift distributions of each tomographic bin, calibrated using both spectroscopic catalogues and the actual cosmic shear measurements. After calibrating the redshift distributions, we set the amplitudes of the Gaussian comb in the weak lensing likelihood to the best-fit parameters and proceed with sampling of the likelihood in cosmological parameter space with pre-marginalised redshift distribution parameters.
+By iterating over steps 2 and 3 we expect small corrections of both sets of parameters towards their best-fit values in the combined parameter space. The best-fit parameters $\boldsymbol{p}^*_{\rm ana}$ then represent the redshift distributions of each tomographic bin, calibrated using both spectroscopic catalogues and the actual cosmic shear measurements. After calibrating the redshift distributions, we set the amplitudes of the Gaussian comb in the weak lensing likelihood to the best-fit parameters and proceed with sampling of the likelihood in cosmological parameter space with pre-marginalised redshift distribution parameters. The sampling of the weak lensing likelihood is illustrated by the green arrows in Fig. \ref{fig:iterative_calibration}.
 \begin{figure}
 \centering
 \includegraphics[width=\linewidth]{plots/iterative.pdf}
-\caption{Sketch of the iterative fitting method used to determine the best-fit in the combined parameter space of cosmological and nuisance parameters. We alternate between optimising cosmological parameters (numerically) keeping nuisance parameters fixed and optimising nuisance parameters (using Newton's method) keeping cosmological parameters fixed. After several iterations we achieve convergence to the best-fit in the combined parameter space.}
+\caption{Sketch of the iterative fitting method used to determine the best-fit in the combined parameter space of cosmological and nuisance parameters. We alternate between optimising cosmological parameters (numerically; blue arrows) keeping nuisance parameters fixed and optimising nuisance parameters (using Newton's method; red arrows) keeping cosmological parameters fixed. After several iterations we achieve convergence to the best-fit in the combined parameter space. After optimising the likelihood, we set the amplitudes of the Gaussian comb to the best-fit parameters and proceed with sampling of the likelihood in cosmological parameter space, as illustrated by the green arrows.}
 \label{fig:iterative_calibration}
 \end{figure}
 \section{KV450 likelihood analysis}
 \label{sec:results}
-We use data from the European Southern Observatory's Kilo Degree Survey \citep[KiDS; ][]{kuijken15, kuijken19,dejong15,dejong17} and the fully overlapping VISTA Kilo-Degree Infrared Galaxy Survey \citep[VIKING; ][]{2013Msngr.154...32E}. This data set, dubbed KV450, combines optical and near-infrared data on a survey area of 450 ${\rm deg}^2$. The photometric redshift calibration is greatly improved compared to the earlier KiDS data set \citep{hildebrandt17} thanks to the addition of five near-infrared bands from VIKING that complement the four optical bands from KiDS. These additional bands improve the accuracy of photometric redshifts, which are used to define the tomographic bins. The fiducial technique of redshift calibration in KiDS utilises a weighted direct calibration of five tomographic bins with deep spectroscopic catalogues (DIR). Uncertainties on the redshift distribution are estimated by a spatial bootstrapping method \citep{hildebrandt18}. The robustness of the photometric redshift calibration has been tested by excluding certain catalogues from the calibration sample as well as using alternative calibration samples. Additionally, the angular cross-correlation between KV450 galaxies and spectroscopic calibration samples has been studied as an alternative to the fiducial direct weighted calibration.
+We use data from the European Southern Observatory's Kilo Degree Survey \citep[KiDS; ][]{kuijken15, kuijken19,dejong15,dejong17} and the fully overlapping VISTA Kilo-Degree Infrared Galaxy Survey \citep[VIKING; ][]{2013Msngr.154...32E}. This data set, dubbed KV450, combines optical and near-infrared data on a survey area of 450 ${\rm deg}^2$. The photometric redshift calibration is greatly improved compared to the earlier KiDS data set \citep{hildebrandt17} thanks to the addition of five near-infrared bands from VIKING that complement the four optical bands from KiDS. These additional bands improve the accuracy of photometric redshifts, which are used to define the tomographic bins. The fiducial technique of redshift calibration in KV450 utilised a weighted direct calibration of five tomographic bins with deep spectroscopic catalogues (DIR). Uncertainties on the redshift distribution are estimated by a spatial bootstrapping method \citep{hildebrandt18}. The robustness of the photometric redshift calibration has been tested by excluding certain catalogues from the calibration sample as well as using alternative calibration samples. Additionally, the angular cross-correlation between KV450 galaxies and spectroscopic calibration samples has been studied as an alternative to the fiducial direct weighted calibration.
 
-Our analysis is based on the fiducial KV450 cosmic shear analysis presented in \cite{hildebrandt18}, in which the combined KiDS+VIKING data set \citep{2019A&A...632A..34W} is binned into five tomographic redshift bins based on their most probable Bayesian redshift $z_B$, inferred with the photo-z code {\sc BPZ} \citep{2000ApJ...536..571B}. Four bins of width $\Delta z = 0.2$ in the range $0.1 < z_{\rm B} \leq 0.9$ and a fifth bin with $0.9 < z_{\rm B} \leq 1.2$ are defined and calibrated using the aforementioned direct calibration method. The estimated redshift distribution is then used to model the 2-point shear correlation function and constraints on cosmological parameters are derived via sampling of the weak lensing likelihood. 
+Our analysis is based on the fiducial KV450 cosmic shear analysis presented in \cite{hildebrandt18}, in which the combined KiDS+VIKING data set \citep{2019A&A...632A..34W} is binned into five tomographic redshift bins based on their most probable Bayesian redshift $z_{\rm B}$, inferred with the photo-z code {\sc BPZ} \citep{2000ApJ...536..571B}. Four bins of width $\Delta z = 0.2$ in the range $0.1 < z_{\rm B} \leq 0.9$ and a fifth bin with $0.9 < z_{\rm B} \leq 1.2$ are defined and calibrated using the aforementioned direct calibration method. The estimated redshift distribution is then used to model the 2-point shear correlation function and constraints on cosmological parameters are derived via sampling of the weak lensing likelihood. 
 
-Recently, self-organising maps (SOMs) were proposed as a method to mitigate systematic biases arising from the redshift calibration by assigning galaxies to groups based on their photometry \citep{buchs, wright_som}. This method allows one to constrain samples of galaxies such that they are fully represented by spectroscopic reference samples. It was recently applied to the KV450 \citep{wright_som_kv450} and KiDS-1000 \citep{hildebrandt20, asgari20} datasets. However, in these works the uncertainties on the redshift distributions are parameterised in terms of shifts of the mean of the redshift distributions with a prior that parameterises correlations between the redshift distributions of tomographic bins. This prior is inferred from simulations \citep{wright_som, hildebrandt20, vdBusch20}. A spatial bootstrapping was not performed, so that an estimate of the full variance of the redshift distribution is not available. In this work we therefore revert to the fiducial KV450 dataset for which such an estimation of the full variance of the redshift distribution is available and leave the application to more recent KiDS datasets for future work.
+Recently, self-organising maps (SOMs) were proposed as a method to mitigate systematic biases arising from the redshift calibration by assigning galaxies to groups based on their photometry \citep{buchs, wright_som, masters15}. This method allows one to constrain samples of galaxies such that they are fully represented by spectroscopic reference samples. It was recently applied to the KV450 \citep{wright_som_kv450} and KiDS-1000 \citep{hildebrandt20, asgari20} datasets. However, in these works the uncertainties on the redshift distributions are parameterised in terms of shifts of the mean of the redshift distributions with a prior that parameterises correlations between the redshift distributions of tomographic bins. This prior is inferred from simulations \citep{wright_som, hildebrandt20, vdBusch20}. A spatial bootstrapping was not performed, so that an estimate of the full covariance of the redshift distribution is not available. In this work we therefore revert to the fiducial KV450 dataset for which such an estimation of the full covariance of the redshift distribution is available and leave the application to more recent KiDS datasets for future work.
 
 In this work, we calibrate the redshift distribution by fitting the Gaussian comb model defined in Sect. \ref{sec:comb} to the redshift distribution histograms of \cite{hildebrandt18}. Additionally, we extend the KV450 likelihood code originally used in the fiducial analysis of \cite{hildebrandt18} by implementing the analytic marginalisation over nuisance parameters. The original likelihood is publicly available in the {\sc MontePython}\footnote{\url{https://github.com/brinckmann/montepython_public}} package \citep{Audren:2012wb, Brinckmann:2018cvx}. We sample the likelihood in the {\sc MultiNest} \footnote{\url{https://github.com/farhanferoz/MultiNest}} mode \citep{feroz09,feroz19} using the python wrapper {\sc PyMultiNest} \footnote{\url{https://github.com/JohannesBuchner/PyMultiNest}} \citep{buchner14}. The matter power spectrum is estimated with the public code {\sc Class}\footnote{\url{https://github.com/lesgourg/class_public}}\citep{blas11} with non-linear corrections from {\sc HMCode} \citep{mead15}. 
 
-We adopt the cosmological model from \cite{hildebrandt18}, that is a flat $\Lambda$CDM cosmology with five parameters: $\omega_{\rm CDM}$, $\omega_{\rm b}$, $A_{\rm s}$, $n_{\rm s}$, and $h$. Additionally, the model includes four nuisance parameters that account for intrinsic alignments ($A_{\rm IA}$), baryon feedback ($A_{\rm bary}$), and additive shear bias ($\delta c$ and $A_c$). Note that in contrast to the fiducial KV450 analysis we do not include linear shifts $\delta z_i$ of the mean redshift in each tomographic bin as nuisance parameters since variations of the redshift distributions are taken into account by the amplitudes of the Gaussian comb model with analytic marginalisation over the corresponding uncertainties. Our choices of priors for the nine cosmological and nuisance parameters are identical to the ones used in \cite{hildebrandt18} and is reported in Table \ref{tab:priors}. Finally, we adopt the cosmic shear data from \cite{hildebrandt18}, which consists of measurements of the 2-point shear correlation functions between the five tomographic redshift bins and the corresponding analytic covariance matrix.
+We adopt the cosmological model from \cite{hildebrandt18}, that is a flat $\Lambda$CDM cosmology with five parameters: $\omega_{\rm CDM}$, $\omega_{\rm b}$, $A_{\rm s}$, $n_{\rm s}$, and $h$. Additionally, the model includes four nuisance parameters that account for intrinsic alignments ($A_{\rm IA}$), baryon feedback ($A_{\rm bary}$), and additive shear bias ($\delta c$ and $A_c$). Note that in contrast to the fiducial KV450 analysis we do not include linear shifts $\delta z_i$ of the mean redshift in each tomographic bin as nuisance parameters since variations of the redshift distributions are taken into account by the amplitudes of the Gaussian comb model with analytic marginalisation over the corresponding uncertainties. Our choices of priors for the nine cosmological and nuisance parameters are identical to the ones used in \cite{hildebrandt18} and are reported in Table \ref{tab:priors}. Finally, we adopt the cosmic shear data from \cite{hildebrandt18}, which consists of measurements of the 2-point shear correlation functions between the five tomographic redshift bins and the corresponding analytic covariance matrix.
 \begin{table}
 \caption{Model parameters and their priors for the KV450 cosmic shear analysis, adopted from \cite{hildebrandt18}.}
 \begin{tabular}{lll}
@@ -301,7 +302,7 @@ Constant $c$-term offset & $\delta c$ & $0.0000\pm0.0002$ \\
 \label{sec:redshift_calibration}
 The first step in the calibration of the KV450 redshift distribution is to fit the modified Gaussian mixture model, defined in Sect. \ref{sec:comb}, to the redshift histograms of \cite{hildebrandt18} which are precalibrated with deep spectroscopic samples. The fit is done simultaneously for all five tomographic redshift bins in order to account for the correlations between bins. To test the sensitivity of the fit to the bin width of the input data histograms, we perform fits using the fiducial histograms with a bin width of $\Delta z = 0.05$ as well as histograms with a smaller bin width of $\Delta z = 0.025$.  Since both histograms trace the same underlying redshift distribution of galaxies in each tomographic bin, we expect that the redshift distributions inferred by fitting the comb model should not depend on the choice of binning of the input data.
 
-However, it is still insightful to compare the fit results from the two types of input data histograms, to test the extent to which the redshift distribution calibration is affected by noise. Moreover, we are free to choose the number of Gaussian components of the redshift distribution model and the variance of each component. In Appendix \ref{ap:calibration} we perform several tests, comparing different choices for the aforementioned free parameters, and address their impact on the cosmological analysis. We find that the analysis is robust with respect to these choices. In this section we report our fiducial result using a model with $N_z = 30$ components and a variance of $\sigma_{\rm comb} = 0.067$, which is equal to the separation between the mean redshift of each component. 
+However, it is still insightful to compare the fit results from the two types of input data histograms, to test the extent to which the redshift distribution calibration is affected by noise. Moreover, we are free to choose the number of Gaussian components of the redshift distribution model and the variance of each component. In Appendix \ref{ap:calibration} we perform several tests, comparing different choices for the aforementioned free parameters, and address their impact on the cosmological analysis. We find that the analysis is robust with respect to these choices. In this section we report our fiducial result using a model with $N_z = 30$ equidistant components between $0\leq z \leq 2$ and a variance of $\sigma_{\rm comb} = 0.067$, which is equal to the separation between the mean redshift of each component. This model is fitted to the redshift histograms with a bin width of $\Delta z = 0.05$.
 \begin{figure*}
 \centering
 \includegraphics[width=\linewidth]{plots/optimisation_result.pdf}
@@ -363,7 +364,7 @@ The intrinsic alignment amplitude $A_{\rm IA}$ is not a cosmological parameter, 
 
 Furthermore, since the signal-to-noise ratio is lower in the low redshift bins compared to the high redshift bins, the relative contribution of intrinsic alignments is stronger in the low redshift bins. This can explain the larger shift of the median of the redshift distribution in the first two redshift bins that is observed in Fig. \ref{fig:medians_posterior}. This is illustrated in Fig. \ref{fig:correlation_function}, which shows the relative difference between the best-fit KV450 2-point shear correlation functions of the fiducial likelihood and the best-fit after iterative calibration of cosmological and nuisance parameters. We find a relative difference of the best-fit curves of up to $20 \%$, which is largest in the first redshift bin. This is compatible with the observed shift of the median of the redshift distribution of the first redshift bin shown in Fig. \ref{fig:medians_posterior}. 
 
-The black data points in Fig. \ref{fig:correlation_function} show the relative difference between the observed two-point correlation function and the fiducial best-fit. These indicate that the signal-to-noise ratio in this bin is very low, so that the shift of the posterior redshift distribution does not have a significant impact on the overall best-fit likelihood value of the combined fit. In the second bin we find the lowest shift of the best-fit curve, although Fig. \ref{fig:medians_posterior} shows a significant shift of the median of the redshift distribution in this bin. This is an indication that the shift of the intrinsic alignment amplitude towards a lower value possibly mitigates the effect of the shifted redshift distribution, so that the effect on the likelihood value is minimal. From these observations we conclude that the intrinsic alignment parameter $A_{\rm IA}$ does not solely measure the amplitude of intrinsic alignments, but instead picks up contributions from systematic shifts of the redshift distribution, due to the degeneracy between the parameters. This would explain the discrepancy between the fiducial KV450 analysis and the KV450 gold sample, which utilises a more accurately calibrated redshift distribution. Furthermore, the effect of the intrinsic alignment parameter mitigating systematic effects has been studied recently in other works such as \cite{vanUitert18} and \cite{Efstathiou18}.
+The black data points in Fig. \ref{fig:correlation_function} show the relative difference between the observed two-point correlation function and the fiducial best-fit. These indicate that the signal-to-noise ratio in this bin is very low, so that the shift of the posterior redshift distribution does not have a significant impact on the overall best-fit likelihood value of the combined fit. In the second bin we find the lowest shift of the best-fit curve, although Fig. \ref{fig:medians_posterior} shows a significant shift of the median of the redshift distribution in this bin. This is an indication that the shift of the intrinsic alignment amplitude towards a lower value possibly mitigates the effect of the shifted redshift distribution, so that the effect on the likelihood value is minimal. From these observations we conclude that the intrinsic alignment parameter $A_{\rm IA}$ does not solely measure the amplitude of intrinsic alignments, but instead picks up contributions from systematic shifts of the redshift distribution, due to the degeneracy between the parameters. Variations between the constraints on the intrinsic alignment parameter were also reported by \cite{wright_som_kv450}, who found differences of up to $\left| \Delta A_{\rm IA} \right| \sim 1.0\sigma$ among analyses. However, since \cite{wright_som_kv450} use a different galaxy sample, the intrinsic alignment amplitude could be intrinsically different. Furthermore, the effect of the intrinsic alignment parameter mitigating systematic effects has been studied recently in other works such as \cite{vanUitert18} and \cite{Efstathiou18}.
 
 \begin{figure*}
 \centering
@@ -390,7 +391,8 @@ The method presented in this paper is not only applicable to cosmic shear analys
 \begin{acknowledgements}
 This work was partially enabled by funding from the UCL Cosmoparticle Initiative.
 BJ acknowledges the kind hospitality of the Aspen Center for Physics, supported by National Science Foundation grant PHY-1607611, where this work was initiated.
-AHW is supported by an European Research Council Consolidator Grant (No. 770935).
+AHW and HH are supported by an European Research Council Consolidator Grant (No. 770935).
+HH is also supported by a Heisenberg grant of the Deutsche Forschungsgemeinschaft (Hi 1495/5-1). 
 We acknowledge the use of data from the MICE simulations, publicly available at http://www.ice.cat/mice.
 Based on data products from observations made with ESO Telescopes at the La Silla Paranal Observatory under programme IDs 177.A-3016, 177.A-3017, 177.A-3018, 179.A-2004, and 298.A-5015.
 \end{acknowledgements}
