--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1467,6 +1467,43 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2015MNRAS.447.1724H},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{hoyle18,
+       author = {{Hoyle}, B. and {Gruen}, D. and {Bernstein}, G.~M. and {Rau}, M.~M. and {De Vicente}, J. and {Hartley}, W.~G. and {Gaztanaga}, E. and {DeRose}, J. and {Troxel}, M.~A. and {Davis}, C. and {Alarcon}, A. and {MacCrann}, N. and {Prat}, J. and {S{\'a}nchez}, C. and {Sheldon}, E. and {Wechsler}, R.~H. and {Asorey}, J. and {Becker}, M.~R. and {Bonnett}, C. and {Carnero Rosell}, A. and {Carollo}, D. and {Carrasco Kind}, M. and {Castander}, F.~J. and {Cawthon}, R. and {Chang}, C. and {Childress}, M. and {Davis}, T.~M. and {Drlica-Wagner}, A. and {Gatti}, M. and {Glazebrook}, K. and {Gschwend}, J. and {Hinton}, S.~R. and {Hoormann}, J.~K. and {Kim}, A.~G. and {King}, A. and {Kuehn}, K. and {Lewis}, G. and {Lidman}, C. and {Lin}, H. and {Macaulay}, E. and {Maia}, M.~A.~G. and {Martini}, P. and {Mudd}, D. and {M{\"o}ller}, A. and {Nichol}, R.~C. and {Ogando}, R.~L.~C. and {Rollins}, R.~P. and {Roodman}, A. and {Ross}, A.~J. and {Rozo}, E. and {Rykoff}, E.~S. and {Samuroff}, S. and {Sevilla-Noarbe}, I. and {Sharp}, R. and {Sommer}, N.~E. and {Tucker}, B.~E. and {Uddin}, S.~A. and {Varga}, T.~N. and {Vielzeuf}, P. and {Yuan}, F. and {Zhang}, B. and {Abbott}, T.~M.~C. and {Abdalla}, F.~B. and {Allam}, S. and {Annis}, J. and {Bechtol}, K. and {Benoit-L{\'e}vy}, A. and {Bertin}, E. and {Brooks}, D. and {Buckley-Geer}, E. and {Burke}, D.~L. and {Busha}, M.~T. and {Capozzi}, D. and {Carretero}, J. and {Crocce}, M. and {D'Andrea}, C.~B. and {da Costa}, L.~N. and {DePoy}, D.~L. and {Desai}, S. and {Diehl}, H.~T. and {Doel}, P. and {Eifler}, T.~F. and {Estrada}, J. and {Evrard}, A.~E. and {Fernandez}, E. and {Flaugher}, B. and {Fosalba}, P. and {Frieman}, J. and {Garc{\'\i}a-Bellido}, J. and {Gerdes}, D.~W. and {Giannantonio}, T. and {Goldstein}, D.~A. and {Gruendl}, R.~A. and {Gutierrez}, G. and {Honscheid}, K. and {James}, D.~J. and {Jarvis}, M. and {Jeltema}, T. and {Johnson}, M.~W.~G. and {Johnson}, M.~D. and {Kirk}, D. and {Krause}, E. and {Kuhlmann}, S. and {Kuropatkin}, N. and {Lahav}, O. and {Li}, T.~S. and {Lima}, M. and {March}, M. and {Marshall}, J.~L. and {Melchior}, P. and {Menanteau}, F. and {Miquel}, R. and {Nord}, B. and {O'Neill}, C.~R. and {Plazas}, A.~A. and {Romer}, A.~K. and {Sako}, M. and {Sanchez}, E. and {Santiago}, B. and {Scarpine}, V. and {Schindler}, R. and {Schubnell}, M. and {Smith}, M. and {Smith}, R.~C. and {Soares-Santos}, M. and {Sobreira}, F. and {Suchyta}, E. and {Swanson}, M.~E.~C. and {Tarle}, G. and {Thomas}, D. and {Tucker}, D.~L. and {Vikram}, V. and {Walker}, A.~R. and {Weller}, J. and {Wester}, W. and {Wolf}, R.~C. and {Yanny}, B. and {Zuntz}, J. and {DES Collaboration}},
+        title = "{Dark Energy Survey Year 1 Results: redshift distributions of the weak-lensing source galaxies}",
+      journal = {\mnras},
+     keywords = {methods: data analysis, catalogues, surveys, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2018,
+        month = jul,
+       volume = {478},
+       number = {1},
+        pages = {592-610},
+          doi = {10.1093/mnras/sty957},
+archivePrefix = {arXiv},
+       eprint = {1708.01532},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018MNRAS.478..592H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{masters15,
+       author = {{Masters}, Daniel and {Capak}, Peter and {Stern}, Daniel and {Ilbert}, Olivier and {Salvato}, Mara and {Schmidt}, Samuel and {Longo}, Giuseppe and {Rhodes}, Jason and {Paltani}, Stephane and {Mobasher}, Bahram and {Hoekstra}, Henk and {Hildebrandt}, Hendrik and {Coupon}, Jean and {Steinhardt}, Charles and {Speagle}, Josh and {Faisst}, Andreas and {Kalinich}, Adam and {Brodwin}, Mark and {Brescia}, Massimo and {Cavuoti}, Stefano},
+        title = "{Mapping the Galaxy Color-Redshift Relation: Optimal Photometric Redshift Calibration Strategies for Cosmology Surveys}",
+      journal = {\apj},
+     keywords = {dark energy, dark matter, galaxies: distances and redshifts, large-scale structure of universe, methods: statistical, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
+         year = 2015,
+        month = nov,
+       volume = {813},
+       number = {1},
+          eid = {53},
+        pages = {53},
+          doi = {10.1088/0004-637X/813/1/53},
+archivePrefix = {arXiv},
+       eprint = {1509.03318},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015ApJ...813...53M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 
 
