--- a/nzmarg.tex
+++ b/nzmarg.tex
@@ -389,18 +389,17 @@ While finalising this work, \cite{Hadzhiyska20} put forward a work on analytic m
 
 The method presented in this paper is not only applicable to cosmic shear analyses, but can also be adapted to other probes such as galaxy-galaxy lensing and galaxy clustering. Therefore, it can especially be used in future joint `6x2pt' analyses, which combine all 2-point correlation functions between overlapping imaging and spectroscopic surveys.
 \begin{acknowledgements}
+We thank Catherine Heymans for helpful comments on this paper.
 This work was partially enabled by funding from the UCL Cosmoparticle Initiative.
-BJ acknowledges the kind hospitality of the Aspen Center for Physics, supported by National Science Foundation grant PHY-1607611, where this work was initiated.
+BJ and AHW acknowledge the kind hospitality of the Aspen Center for Physics, supported by National Science Foundation grant PHY-1607611, where this work was initiated.
 AHW and HH are supported by an European Research Council Consolidator Grant (No. 770935).
 HH is also supported by a Heisenberg grant of the Deutsche Forschungsgemeinschaft (Hi 1495/5-1). 
 We acknowledge the use of data from the MICE simulations, publicly available at http://www.ice.cat/mice.
 Based on data products from observations made with ESO Telescopes at the La Silla Paranal Observatory under programme IDs 177.A-3016, 177.A-3017, 177.A-3018, 179.A-2004, and 298.A-5015.
 \end{acknowledgements}
 
-
 \bibliographystyle{aa}
 \bibliography{bibliography}
-
 
 \begin{appendix} 
 \section{Marginalisation over nuisance parameters}
